maze.pledge.PledgeMaze.scala.code
override def run() {
  var cpt=0
  while(!estSurBiscuit){
    if(cpt==0 && !estFaceMur){
      avance()
    }
    else{
      keepHandOnSideWall(cpt)
    }
  }
}

def keepHandOnSideWall(cpt:Int){
 	if(estFaceMur()){
    droite()
    cpt+=1
  }  
  if(estFaceMur()){
    droite()
    cpt+=1
  }
  if(estFaceMur()){
    droite()
    cpt+=1
  }
  avance()
  gauche()
  cpt-=1
}

def isDirectionFree(dir){
  while(getDirection!=dir){
    droite()
  }
  if(estFaceMur){
    return false
  }
  else{
    return true
  }
}